<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyApplication</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_settings">登录</string>
    <string name="reg_settings">注册</string>
    <string name="select_settings">选择校区</string>
    <string name="loc_settings">我的位置</string>
    <string name="navi_settings">导航</string>
    <string name="follow_settings">跟随模式</string>
    <string name="logout_settings">退出</string>
    <string name="user_settings">用户信息</string>
    <string name="title_activity_building">BuildingActivity</string>
    <string name="title_activity_navi_setting">NaviSettingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_navi">NaviActivity</string>
    <string name="title_activity_campus">CampusActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_web">WebActivity</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="title_activity_my_event">MyEventActivity</string>

</resources>
